--- a/apps/hello/deployment.yaml
+++ b/apps/hello/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: hello-nodejs
-          image: bhuv01/hello-nodejs:latest
+          image: manneykapoor/hello-nodejs:latest
           ports:
             - containerPort: 3000
