change in deployment.yaml 2

--- a/apps/hello/deployment.yaml
+++ b/apps/hello/deployment.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
         - name: hello-nodejs
           image: manneykapoor/hello-nodejs:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
